<resources>
    <string name="app_name">201735042efnansifyan</string>
    <string name="select_quiz_name">Select Quiz Name</string>
    <string name="_00_59">00:59</string>
    <string name="_1_10">1/10</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="question_will_come_here">Question Will Come Here...</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="next">NEXT</string>
    <string name="choose_quiz">Choose Quiz</string>
    <string name="wind_instruments_quiz">Wind Instruments Quiz</string>
    <string name="keyed_instruments_quiz">Keyed Instruments Quiz</string>
    <string name="stringed_instruments_quiz">Stringed instruments Quiz</string>
    <string name="percussion_instruments">Percussion instruments</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="sound_wave_image">sound wave image</string>
    <string name="wind_instrument">wind instrument</string>
    <string name="keyed_instrument">keyed instrument</string>
    <string name="stringed_instrument">stringed instrument</string>
    <string name="percussion_instrument">percussion instrument</string>

</resources>