<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1F6BBB"
    tools:context="QuizActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#1F6BBB">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/previous" />

        <TextView
            android:id="@+id/QuizName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_quiz_name"
            android:textColor="#90CAF9"
            android:textSize="18sp"
            android:textStyle="bold" />



    </RelativeLayout>

    <TextView
        android:id="@+id/questionCount"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_white"
        android:elevation="1dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/_1_10"
        android:textColor="#1F6BBB"/>
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="-20dp"
        android:background="@drawable/round_back_light_yellow"
        android:gravity="center"
        android:minHeight="100dp"
        android:text="@string/question_will_come_here"
        android:padding="20dp"
        android:textColor="#CC000000"
        android:textSize="16sp"/>

            <ImageView
                android:id="@+id/playButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/question"
                android:layout_gravity="center"
                app:srcCompat="@android:drawable/ic_media_play">

            </ImageView>

     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/option1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:text="@string/option1"
         android:background="@drawable/round_back_white_stroke2"
         android:textAllCaps="false"
         android:textColor="#1F6BBB"
         android:layout_marginEnd="20dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/option2"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="#1F6BBB"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/option3"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="#1F6BBB"
        android:layout_marginEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/option4"
        android:background="@drawable/round_back_white_stroke2"
        android:textAllCaps="false"
        android:textColor="#1F6BBB"
        android:layout_marginEnd="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_green10"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#4527A0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

